--- a/src/ui/lztMain.ui
+++ b/src/ui/lztMain.ui
@@ -24,7 +24,7 @@
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_3" stretch="4,6,6,1">
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="label_img">
         <property name="maximumSize">
          <size>
           <width>16777215</width>
@@ -32,12 +32,12 @@
          </size>
         </property>
         <property name="text">
-         <string>555555</string>
+         <string/>
         </property>
        </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,3,3,1">
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
@@ -52,7 +52,7 @@
          </spacer>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,1,4,2">
           <item>
            <spacer name="horizontalSpacer_5">
             <property name="orientation">
@@ -92,7 +92,7 @@
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="2,1,4,2">
           <item>
            <spacer name="horizontalSpacer_7">
             <property name="orientation">
