--- a/src/ui/start.ui
+++ b/src/ui/start.ui
@@ -13,9 +13,15 @@
   <property name="windowTitle">
    <string>投屏</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">border: none</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label_pic">
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
